# GeodeModInstaller

./: .gitignore  CMakeLists.txt  GeodeModInstaller.aip  GeodeModInstaller.back (1).aip  GeodeModInstaller.back.aip  GeodeModInstaller.msi  README.md  WindowsAppCertificationKit_Validator.bat
GeodeModInstaller-cache/part1/: GeodeModInstaller1.cab  output-info.ini
GeodeModInstaller-cache/part2/: GeodeModInstaller1.cab  output-info.ini
geode/mods/: elSai.FixGradient.geode  user95401.fucks_icon_kit.geode
src/: GeodeModInstaller.cpp  versoin.rc
